--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="AI-Powered E-Commerce Shop, IntelliCart"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
